# ChangeLog for x11-themes/gnome-themes-standard
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes-standard/ChangeLog,v 1.40 2013/03/28 22:31:29 pacho Exp $

*gnome-themes-standard-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org>
  +gnome-themes-standard-3.8.0.ebuild:
  Version bump for Gnome 3.8

*gnome-themes-standard-3.6.5 (24 Mar 2013)

  24 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-themes-standard-3.6.5.ebuild:
  Version bump.

  25 Feb 2013; Zac Medico <zmedico@gentoo.org>
  gnome-themes-standard-3.6.2.ebuild:
  Add ~arm-linux keyword.

  28 Jan 2013; Alexis Ballier <aballier@gentoo.org>
  gnome-themes-standard-3.6.2.ebuild:
  keyword ~amd64-fbsd

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org>
  gnome-themes-standard-3.6.2.ebuild:
  Add ~sparc, wrt bug #449220

  27 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-themes-standard-3.4.2.ebuild:
  Require gtk+-3.4, since gnome-themes-standard-3.4 + gtk+-3.6 = crashes
  (thanks to ibqn for reporting).

  27 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gnome-themes-standard-3.6.1.ebuild, gnome-themes-standard-3.6.2.ebuild:
  Drop sparc keyword, needs gtk+-3.6 to be keyworded. Update to EAPI5. Drop
  old.

*gnome-themes-standard-3.6.2 (21 Nov 2012)

  21 Nov 2012; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-themes-standard-3.0.2.ebuild, -gnome-themes-standard-3.2.1.ebuild,
  +gnome-themes-standard-3.6.2.ebuild:
  Version bump. Clean up old revisions.

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org>
  gnome-themes-standard-3.4.2.ebuild:
  ia64/sh/sparc stable wrt #427544

*gnome-themes-standard-3.6.1 (17 Oct 2012)

  17 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gnome-themes-standard-3.6.0.1.ebuild, -gnome-themes-standard-3.6.0.2.ebuild,
  +gnome-themes-standard-3.6.1.ebuild, metadata.xml: