@@ -2,19 +2,19 @@
 Hash: SHA256
 
 DIST gnome-themes-standard-3.4.2.tar.xz 3086124 SHA256 aa29d23708e3357775fb7ea2de14b90551a2c732fce297f3372dae005374c3a8 SHA512 33baa6b8630054d12511852037fcd7c6bf8b8dc77f2b05a9ffb94f8a0405fc81546239fc3a9e9632dc5c610a1d08706531774440fadd58b63f5500df0fe39115 WHIRLPOOL f10eb080454d65ff17d000a7e37e8558afd6b0db161ff0b512e21d00f0bfe91cdb2155514609d773c00b3188e15d3ecd1f3f7fb52856be59235417ea4a5be321
-DIST gnome-themes-standard-3.6.2.tar.xz 3609716 SHA256 c41503d0e18e17188c4fd1be5f6a7e90b08564e2a19d9a318b145a56d4455352 SHA512 79ab14e64ac7de06de0c887a73d91b2275f84a870e7799eca1745773598507016d068cf895a7a5f2bcc743cc259703281738e06e4ca6e7cd815840aadb8c9106 WHIRLPOOL fc4e3cd83b5b29fff902ea9c3c5c5456512e9ffac4b7088870c33311edaa168c17149ed59ea5f2b3dd98612b95c0c4dd160251f38660f926b066744950d8fd3f
 DIST gnome-themes-standard-3.6.5.tar.xz 3614688 SHA256 e39129063b2edcad19370e06b46bbe7fb61fcb4a0c5901eaa9e0d08080097a3c SHA512 5de2227de5df196326553ed2f5c94eae575f0679f9a578721b3f54c05edfa97844497017a2ec721d1600054cf7734e33db8f1f729f59246afefc97308a1af514 WHIRLPOOL 2d3787c2577142c35b238044860cef848ca442efe63da7b3c610e0a306bb58cd786255084236a042514a3cbc5ded099ce56885b66e44fabbc0c3859ce11c544e
 DIST gnome-themes-standard-3.8.0.tar.xz 3788500 SHA256 d544f3df574eb956059a77d0ee9cd766858ccd1b086d975909c07e444aaf931b SHA512 28bcd4e342213aee6b88f731226f9996a34b61cca974188059980efe73b5d23fe82cd69dae71223e93e71bd97191266e38b805f94ba3e245d2ac72aae214db80 WHIRLPOOL 6abfa1d818123838fe82dcadbefb6613a4935ff00bfac357b2e3e75c8a3daed8ad3c14112d5316707aa60f4651f8437bcadd8ac9a4154f109debe8b933697e6e
+DIST gnome-themes-standard-3.8.1.tar.xz 3787968 SHA256 5cc1b27a70ca6176343212159236332799b074885867e380ed9b3817e15dd1d1 SHA512 a490f0a11f566fe54a41f19f7bd07e571560517d0e7538b439187b04049cf2d1dbe80bb5783e9076d79c0664d42f38137ceff91240149103e9aaf313612cb2fc WHIRLPOOL 803aed2abcb299011fc5f249b38ef91b761fdc4e457b2f2913e19c5262428efcac3a6916ec05ccb18a15a746136c759590d95effb0b1abf7287d90695559935f
 EBUILD gnome-themes-standard-3.4.2.ebuild 1706 SHA256 9aede85362fe094f1f324724e27c2d500502c0962a4ce682b12528c070526687 SHA512 da09cb64e8454400a691b274f0b4ca3116da125a169a5ff88bb446176c07d1f851b373ce28c31cc19e0bef65e98015af01309d9da561a9b4a8ab8e3d6c25372b WHIRLPOOL bac806b60b8ab821437595441175569e6c4feb088a7fc19e568faf98391f4fd93e3d2b190695098a662a68f42694cbd1d0770081b44aa35ac139a6e173149776
-EBUILD gnome-themes-standard-3.6.2.ebuild 1778 SHA256 dc59716fd116915a1c16714c0fe2345edb5a0c9eeaaa46cc16f29c6e3d1b46a7 SHA512 3a4c9cc32673ca3f3fb280407e08aa75c44ecf6c7d388c25adcdf3e74f8beb630be9dd18c78adb4b94e2c75e65a94127fa584ba434f3e028cf4d2b3e3219f5f5 WHIRLPOOL 174a11b9dd2557ba32f6d1c4a7538c410b0113d924da6dfe644974d0ea272e4a21c76e6d445e14078ee79b238b2b472cf2a6e7bda474424b4d67ed4fef27ea58
 EBUILD gnome-themes-standard-3.6.5.ebuild 1788 SHA256 e6d905e8605691fa2e95e5baefc05dc23e627157969d4a5fe069c8220ecdb63f SHA512 8d91d97fc0488051e29973ff576a02eeb16f24c3e1e024d4af23b0f829479826595403d0ce144f6ef677e9b14bbb2079abb0e140c0787fc5e4ffa19ec5c19de9 WHIRLPOOL c82a0177703f4f5c87ddd19b63a588e1497add7783880f6e42f832140efc981547a64311c13bc0c2d244c2384eabfe7f7e05b55e829018694d49861185f9c0ec
 EBUILD gnome-themes-standard-3.8.0.ebuild 1759 SHA256 908e094a77b02651c74f5997e1b023d017ab242ffa0b7e33333964fcc7ad2c58 SHA512 4741189a8b194edd2490487b3329177d138c6ffe7ea12ab016de4cead55e6a6467aa34378765f9072b8c4b843ec8ae539f198ed92e7399af2f71cbbf531846cb WHIRLPOOL 3f68d57436975a5e985955bcaf708cc8797817e266063d46850191278514978fdf25aa6867cb0529eed19108d31a4b910ce1a79fcf98ebf1000bf557741fea03
-MISC ChangeLog 6972 SHA256 94aec522094d982905d625179f9f5e7bc71d87b2c404d3942ddc43b9adc98576 SHA512 ad783791eaffb16390f7f58dff90ae5be8d72287a7c9c45a4d9d294ac1122fb83ff75324a7f004d2bf872bdf0fcc0a65fd560ec38e61649c2ce2905e5a9a7813 WHIRLPOOL 03b02528314f02c7948965b18ff20c2f363e048941d0fb9861af677cda9489aa873ad464a45ff63e94d794781e2cc5490e937b130761d60acdc41bbf57eb434e
+EBUILD gnome-themes-standard-3.8.1.ebuild 1789 SHA256 45a61b1e66b7d439795e587887d0d56ecf9c60f655855b345f7f71b9902faf1b SHA512 862f0e6cd5786e464ae02294464ec2e8d2aa54579c2b821b9e5cbe15ca7097a02b09fa7e4aac9426e88f28201cf924ec44db575860668256d3171bd725337a22 WHIRLPOOL a4c46a18473da36d38eb6ad3763a238e97052d7ef469cef5471033c7c8ff27f5cd1336343a0c587b930b594baa460915169d54c883f9dd458753f07e41efff1a
+MISC ChangeLog 7164 SHA256 b1d3e7b5ff50292103e7e1c7b14ce19884c26876ab6995834996e370d878fa7c SHA512 ef1ecebd56b88d3c7a59bc8517a43aa8bec510d7fd226b715066a8dd935cc9af09f34969e09d10f1d465a78dffaeb18e0de9c3de428d5cccd9ec8dbad1700fcc WHIRLPOOL a8c8d07e2e53a65ab4b4cd9a661e0d4e633f73bd061c3e4b903dec6760480fbd4558cca35407ca2b1e51a5ad2bf2b3c3ee690eef74d0ec7baf7753aa066f014f
 MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFUxMMACgkQCaWpQKGI+9S9AQCeJs0kHm5Dfqyzi1z1mGqzaIuU
-UjYAni5HZqlldu9Sn706AyoHUfV9QJb5
-=ONMJ
+iEYEAREIAAYFAlFwTOEACgkQCaWpQKGI+9TapACfc0PJj/FBXhcN93v+/Gfy/vjG
+czwAni4nzcK7EVQjU3tkgADuOBcjenxM
+=3ehP
 -----END PGP SIGNATURE-----
