@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gnome-themes-standard
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes-standard/ChangeLog,v 1.40 2013/03/28 22:31:29 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gnome-themes-standard/ChangeLog,v 1.41 2013/04/18 19:43:28 pacho Exp $
+
+*gnome-themes-standard-3.8.1 (18 Apr 2013)
+
+  18 Apr 2013; Pacho Ramos <pacho@gentoo.org>
+  +gnome-themes-standard-3.8.1.ebuild, -gnome-themes-standard-3.6.2.ebuild:
+  Version bump, drop old
 
 *gnome-themes-standard-3.8.0 (28 Mar 2013)
 
